# deeptiny

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.example  Dockerfile  README.md  codex.md
.github/workflows/: formatting.yml  testing.yml
cmake/: deeptinyConfig.cmake.in
demo/: README.md
demo/transfomer-demo/: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.example  README.md
demo/transfomer-demo/src/: activation_dump.cc  benchmark.cc  generation_benchmark.cc  main.cc  pre_fill_benchmark.cc  self_attention_debug_dump.cc  smollm2_135m_instruct_loader.cc  smollm2_135m_instruct_loader.h  transformer.cc  transformer.h
demo/transfomer-demo/src/modules/: embedding.cc  embedding.h  linear.cc  linear.h  llama_mlp.cc  llama_mlp.h
demo/transfomer-demo/tests/: embedding_test.cc  modules_smoke.cc
include/deeptiny/: autograd.h  functional.h  math.h  tensor.h  tensorImpl.h  tensor_slice_proxy.h  types.h  view.h
include/deeptiny/nn/: embedding.h  gated_mlp.h  gated_relu.h  kv_cache.h  linear.h  module.h  multi_head_attention.h  rms_norm.h  transformer_block.h
scripts/: ci-local.sh  docker-dev-test.sh
src/: autograd_meta.cc  autograd_meta.h  broadcast.cc  broadcast.h  engine.cc  engine.h  functional.cc  math.cc  tensor.cc  tensorImpl.cc  tensorImpl.h  tensor_impl.cc  tensor_impl.h  tensor_slice_proxy.cc  types.cc  utils.cc  utils.h  view.cc  view_backward.h
src/cpu/: kernels.cc  kernels.h  storage.cc  storage.h
src/cpu/kernels/: batched_matmul.cc  binary.cc  common.h  from_buffer.cc  reduce.cc  relu.cc  silu.cc  softmax.cc  sqrt.cc
src/dispatch/: batched_matmul.cc  batched_matmul.h  binary.cc  binary.h  dispatch.h  reduce.cc  reduce.h  relu.cc  relu.h  silu.cc  silu.h  softmax.cc  softmax.h  sqrt.cc  sqrt.h
src/nn/: embedding.cc  gated_mlp.cc  gated_relu.cc  kv_cache.cc  linear.cc  module.cc  multi_head_attention.cc  rms_norm.cc  transformer_block.cc  validation.h
tests/: CMakeLists.txt  ViewTest.cc  broadcast_test.cc  hello_world_test.cc  math_test.cc  nn_attention_test.cc  nn_kv_cache_test.cc  nn_layers_test.cc  nn_module_test.cc  nn_transformer_block_test.cc  softmax_test.cc  tensor_copy_from_buffer_test.cc  tensor_factory_test.cc  view_test.cc
tests/doctest/: doctest.h
tests/test_utils/: test_utils.h  utils.cc
tmp/smollm135m_activation_diff/: run_diff.py
